# plotweaver-web-enhanced

./: .env.docker  .gitignore  API_AUDIT_SUMMARY.md  API_TESTING_STRATEGY.md  ARCHITECTURE_ALIGNMENT_PLAN.md  ARCHITECTURE_ALIGNMENT_SUMMARY.md  AUTHENTICATION_EVALUATION.md  AUTHENTICATION_FLOW.md  BACKEND_GIT_REQUIREMENTS.md  BFF_FRONTEND_ALIGNMENT_PLAN.md  CLAUDE.md  DOCKER_INTEGRATION_CHANGES.md  Dockerfile.bff  FRONTEND_INTEGRATION.md  GIT_NATIVE_SETUP.md  INCREMENTAL_TESTING_GUIDE.md  Makefile  PLOTWEAVER_MULTI_MANUSCRIPT_COMPLETE.md  QUALITY_CHECK_REPORT.md  README.md  WEEK1-README.md  WEEK2-README.md  all-docs.txt  check_db.py  cleanup-git-native-frontend-bff.md  commit-production-ready.sh  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  docker-security-check.sh  example_endpoints.py  fe-plan.md  fix-frontend.sh  fix_api_integration.sh  foundation-test.md  make_tests_executable.sh  mypy.ini  package-lock.json  package.json  phase2-frontend-bff-implementation.md  (+22 more)
bff/: .coveragerc  .env.example  README.md  mypy.ini  pyproject.toml  requirements.txt
bff/preview/: sanitizer.py
bff/reports/: action-plan-2025-07-14.md  github-issues-2025-07-14.md  health-assessment-2025-07-14.md  health-summary-2025-07-14.md
bff/server/: constants.py  feedback_endpoints.py  git_endpoints.py  git_manager.py  git_write_endpoints.py  main.py  project_proxy.py  story_endpoints.py.archived  story_models.py.archived  story_proxy.py  worldbuilding_endpoints.py  write_proxy.py
bff/services/: enhanced_git_manager.py  git_manager.py
bff/tests/: README.md  (+3 more)
(+681 files in other folders)
